fix border buttom on firefox

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header{
 
 button .tabs{
     color: white;
+    border: 0;
 }
 
 .img-top{
